--- a/formula1_mini_sprint.ipynb
+++ b/formula1_mini_sprint.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpUmT8J/Zt5Cx5VawAMV/S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +29,70 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ixaXvQAwGHZv"
+        "id": "ixaXvQAwGHZv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d52a424-2fd2-4c42-db38-e07395545c97"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "team 19\n"
+          ]
+        }
+      ],
+      "source": [
+        "print (\"team 19\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (\"we got this\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gQsd8EFPNT_U",
+        "outputId": "183368a0-6ef6-4b26-d46c-7e05eb0a543c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "we got this\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hi team\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3zicQ2BzJAJU",
+        "outputId": "cedf55dc-b879-4487-b34b-ca0d94029469"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hi team\n"
+          ]
+        }
+      ]
     }
   ]
 }
