--- a/formula1_mini_sprint.ipynb
+++ b/formula1_mini_sprint.ipynb
@@ -27,25 +27,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "ixaXvQAwGHZv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d52a424-2fd2-4c42-db38-e07395545c97"
+        "outputId": "616884e5-46b5-47cb-e9a8-2992edc7ff06"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "team 19\n"
+            "fatal: destination path 'forumla1-mini-sprint' already exists and is not an empty directory.\n"
           ]
         }
       ],
       "source": [
-        "print (\"team 19\")\n"
+        "!git clone https://github.com/tanisaur/forumla1-mini-sprint.git\n"
       ]
     },
     {
