included import libraries

--- a/formula1_mini_sprint.ipynb
+++ b/formula1_mini_sprint.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ixaXvQAwGHZv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2bb80230-8682-44a5-9759-bb1c311d109f"
+        "outputId": "5825bf81-18c2-402b-979b-5d39dd8ad8ba"
       },
       "outputs": [
         {
@@ -41,12 +41,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'forumla1-mini-sprint'...\n",
-            "remote: Enumerating objects: 29, done.\u001b[K\n",
-            "remote: Counting objects: 100% (29/29), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (28/28), done.\u001b[K\n",
-            "remote: Total 29 (delta 5), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (29/29), 5.86 MiB | 4.17 MiB/s, done.\n",
-            "Resolving deltas: 100% (5/5), done.\n"
+            "remote: Enumerating objects: 76, done.\u001b[K\n",
+            "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (73/73), done.\u001b[K\n",
+            "remote: Total 76 (delta 28), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (76/76), 5.92 MiB | 2.79 MiB/s, done.\n",
+            "Resolving deltas: 100% (28/28), done.\n"
           ]
         }
       ],
@@ -73,6 +73,108 @@
       ],
       "metadata": {
         "id": "asu-ybJPnuS-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Import libraries**"
+      ],
+      "metadata": {
+        "id": "SIliSQ90QtO9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install fastf1"
+      ],
+      "metadata": {
+        "id": "9sPF512zRHgu",
+        "outputId": "8a1af2ba-401c-4269-96cc-e1b207ecc515",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting fastf1\n",
+            "  Downloading fastf1-3.3.6-py3-none-any.whl (130 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.0/130.0 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: matplotlib<4.0.0,>=3.5.1 in /usr/local/lib/python3.10/dist-packages (from fastf1) (3.7.1)\n",
+            "Requirement already satisfied: numpy<2.0.0,>=1.21.5 in /usr/local/lib/python3.10/dist-packages (from fastf1) (1.25.2)\n",
+            "Requirement already satisfied: pandas<3.0.0,>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from fastf1) (2.0.3)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.10/dist-packages (from fastf1) (2.8.2)\n",
+            "Collecting requests-cache>=1.0.0 (from fastf1)\n",
+            "  Downloading requests_cache-1.2.0-py3-none-any.whl (61 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.4/61.4 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: requests>=2.28.1 in /usr/local/lib/python3.10/dist-packages (from fastf1) (2.31.0)\n",
+            "Requirement already satisfied: scipy<2.0.0,>=1.7.3 in /usr/local/lib/python3.10/dist-packages (from fastf1) (1.11.4)\n",
+            "Collecting thefuzz (from fastf1)\n",
+            "  Downloading thefuzz-0.22.1-py3-none-any.whl (8.2 kB)\n",
+            "Collecting timple>=0.1.6 (from fastf1)\n",
+            "  Downloading timple-0.1.8-py3-none-any.whl (17 kB)\n",
+            "Collecting websockets>=10.3 (from fastf1)\n",
+            "  Downloading websockets-12.0-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (130 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.2/130.2 kB\u001b[0m \u001b[31m15.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib<4.0.0,>=3.5.1->fastf1) (1.2.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib<4.0.0,>=3.5.1->fastf1) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib<4.0.0,>=3.5.1->fastf1) (4.51.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib<4.0.0,>=3.5.1->fastf1) (1.4.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib<4.0.0,>=3.5.1->fastf1) (24.0)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib<4.0.0,>=3.5.1->fastf1) (9.4.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib<4.0.0,>=3.5.1->fastf1) (3.1.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas<3.0.0,>=1.4.1->fastf1) (2023.4)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.10/dist-packages (from pandas<3.0.0,>=1.4.1->fastf1) (2024.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil->fastf1) (1.16.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.28.1->fastf1) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.28.1->fastf1) (3.7)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.28.1->fastf1) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.28.1->fastf1) (2024.2.2)\n",
+            "Requirement already satisfied: attrs>=21.2 in /usr/local/lib/python3.10/dist-packages (from requests-cache>=1.0.0->fastf1) (23.2.0)\n",
+            "Collecting cattrs>=22.2 (from requests-cache>=1.0.0->fastf1)\n",
+            "  Downloading cattrs-23.2.3-py3-none-any.whl (57 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.5/57.5 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: platformdirs>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests-cache>=1.0.0->fastf1) (4.2.1)\n",
+            "Collecting url-normalize>=1.4 (from requests-cache>=1.0.0->fastf1)\n",
+            "  Downloading url_normalize-1.4.3-py2.py3-none-any.whl (6.8 kB)\n",
+            "Collecting rapidfuzz<4.0.0,>=3.0.0 (from thefuzz->fastf1)\n",
+            "  Downloading rapidfuzz-3.9.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.4 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.4/3.4 MB\u001b[0m \u001b[31m47.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: exceptiongroup>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from cattrs>=22.2->requests-cache>=1.0.0->fastf1) (1.2.1)\n",
+            "Requirement already satisfied: typing-extensions!=4.6.3,>=4.1.0 in /usr/local/lib/python3.10/dist-packages (from cattrs>=22.2->requests-cache>=1.0.0->fastf1) (4.11.0)\n",
+            "Installing collected packages: websockets, url-normalize, rapidfuzz, cattrs, thefuzz, requests-cache, timple, fastf1\n",
+            "Successfully installed cattrs-23.2.3 fastf1-3.3.6 rapidfuzz-3.9.1 requests-cache-1.2.0 thefuzz-0.22.1 timple-0.1.8 url-normalize-1.4.3 websockets-12.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import fastf1 as ff1"
+      ],
+      "metadata": {
+        "id": "4Aw_-RNPQqut"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Read in data**"
+      ],
+      "metadata": {
+        "id": "FbYrbcv6RTyI"
       }
     },
     {
