Initial hypothesis updated

--- a/formula1_mini_sprint.ipynb
+++ b/formula1_mini_sprint.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "ixaXvQAwGHZv",
         "colab": {
@@ -51,18 +51,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Team 19:\n",
+        "#**Team 19:**\n",
         "\n",
-        "We are creating a Hypothesis from Formula 1 Data Sets recruiting for a specic constructor by analyzing and focusing on Data from the following files:\n",
         "\n",
-        "*driver\n",
-        "*results\n",
-        "*lap times\n",
+        "##*Scenario:*\n",
+        "We are a data consulting firm that has been hired by the worst performing constructor to help them hire a new team of drivers and improve their performance standings\n",
         "\n",
-        "We are going to do a basic analysis of the top ten drivers.\n",
+        "##*Hypothesis:*\n",
+        "Hiring a new team of drivers as well as possibly improving pit time could help improve the standings of our constructor.\n",
         "\n",
-        "How many wins they have from the previous season for 2023?\n",
-        "The average race lap times for the 2023 per driver?\n",
+        "##*Initial Data Exploration:*\n",
+        "- Top ten drivers historically.\n",
+        "\n",
+        "- Identify current top performing drivers.\n",
+        "\n",
+        "- Current standing of points drivers have.\n",
+        "\n",
+        "- Constructors ranking\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -90,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +152,7 @@
       "metadata": {
         "id": "4Aw_-RNPQqut"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +180,7 @@
       "metadata": {
         "id": "L2LhuQkjT2Em"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,16 +237,7 @@
       "metadata": {
         "id": "QY3aYJWAlb-O"
       },
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "BSkZe01z-KCl"
-      },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +259,7 @@
           "height": 579
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -305,7 +303,7 @@
           "height": 424
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -788,7 +786,7 @@
           "height": 739
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1294,7 +1292,7 @@
           "height": 206
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1643,7 @@
           "height": 400
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2056,7 +2054,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2096,7 +2094,7 @@
           "height": 582
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2130,7 +2128,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2177,6 +2175,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
         "# Code and Group the results by name constructors and show their rank from the wins for the top ten\n",
         "# Sort the named constructors by rank in ascending order\n",
         "# Print the top 10 named constructors and their rank from provided datasets\n",
@@ -2203,7 +2202,9 @@
         "sorted_constructors_by_name = constructors_rank_by_name.sort_values(ascending=False)\n",
         "\n",
         "# Print the top 10 named constructors and their rank\n",
-        "print(sorted_constructors_by_name.head(10))\n"
+        "print(sorted_constructors_by_name.head(10))\n",
+        "\n",
+        "\"\"\"\n"
       ],
       "metadata": {
         "id": "oTE65fosXQOL",
@@ -2212,7 +2213,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2247,21 +2248,23 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
         "# Create a bar plot for the top 10 constructors\n",
         "top_constructors = pd.merge(results, constructors, on='constructorId')\n",
         "top_constructors = top_constructors.groupby('constructorId')['rank'].rank()\n",
-        "top_constructors = top_constructors.sort_values(ascending=False).head(10)"
+        "top_constructors = top_constructors.sort_values(ascending=False).head(10)\n",
+        "\"\"\""
       ],
       "metadata": {
         "id": "p62X6L7PBfh8"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# prompt: code and Fix plt bar with construtor name and rank using datasets provided\n",
+        "\"\"\"# prompt: code and Fix plt bar with construtor name and rank using datasets provided\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "# Extract the required data from top_constructors\n",
@@ -2280,7 +2283,8 @@
         "plt.xticks(rotation=90)\n",
         "\n",
         "# Display the chart\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\"\"\""
       ],
       "metadata": {
         "id": "E_4RE1fMWxh8",
@@ -2290,7 +2294,7 @@
           "height": 506
         }
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
